--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -3,16 +3,29 @@
   font-family: sans-serif;
 }
 
-html,
-body {
-  width: 100%;
-  height: 100%;
-}
-
 @mixin inner-card() {
   border-radius: 5px;
   background-color: white;
   overflow: hidden;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   min-height: 50px;
+}
+
+@mixin outer-card() {
+  margin-left: $side-margin;
+  margin-right: $side-margin;
+  padding: 14px;
+  border-radius: 7px;
+  margin-bottom: 20px;
+
+  .card-title {
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 22px;
+    letter-spacing: 1.092px;
+    margin-bottom: 19px;
+  }
+
+  min-height: 100px;
 }
